# rds-like-manager

./: Cargo.toml  LICENSE  README.md  env.template
src/: main.rs  mysql.rs  postgresql.rs
