[package]
name = "rds-like-manager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mysql = { version = "24", default-features = false, features = ["default-rustls"] }
passwords = "3.1.16"
postgres = "0.19.7"
